# wealthreader_hub

./: README.md  hooks.py  license.txt  pyproject.toml
wealthreader_hub/: hooks.py  modules.txt
wealthreader_hub/config/: desktop.py
wealthreader_hub/doctype/wealthreader_configuration/: test_wealthreader_configuration.py
wealthreader_hub/doctype/wealthreader_customer/: test_wealthreader_customer.py  wealthreader_customer.json
wealthreader_hub/setup/: install.py
wealthreader_hub/wealthreader_hub/: api.py  utils.py
wealthreader_hub/wealthreader_hub/doctype/wealthreader_configuration/: wealthreader_configuration.json  wealthreader_configuration.py
wealthreader_hub/wealthreader_hub/doctype/wealthreader_customer/: wealthreader_customer.py
wealthreader_hub/wealthreader_hub/doctype/wealthreader_usage_report/: test_wealthreader_usage_report.py  wealthreader_usage_report.json  wealthreader_usage_report.py
wealthreader_hub/wealthreader_hub/tests/: test_utils.py
wealthreader_hub/workspace/wealthreader_hub/: wealthreader_hub.json
wealthreader_hub/www/: quickbanks-widget.py
www/: quickbanks-widget.html  quickbanks-widget.py
